--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
+  "engines": {
+    "node": "14.20.1"
+  },
   "devDependencies": {
     "webpack-dev-server": "^3"
   },
