--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
+    "css-loader": "5.2.7",
+    "sass-loader": "10.2.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
@@ -15,6 +17,7 @@
     "node": "14.20.1"
   },
   "devDependencies": {
+    "sass": "^1.63.6",
     "webpack-dev-server": "^3"
   },
   "resolutions": {
