--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "@rails/webpacker": "5.4.4",
     "css-loader": "5.2.7",
     "sass-loader": "10.2.0",
-    "turbolinks": "^5.2.0",
-    "webpack": "^5.88.1",
-    "webpack-cli": "^4.9.1"
+    "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "engines": {
