--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "devise-sample-app",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
     "css-loader": "5.2.7",
+    "rails_admin": "^3.1.2",
     "sass-loader": "10.2.0",
     "turbolinks": "^5.2.0"
   },
