--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.4",
     "css-loader": "5.2.7",
+    "dotenv": "^16.3.1",
+    "mailslurp-client": "^15.17.2",
     "rails_admin": "^3.1.2",
     "sass-loader": "10.2.0",
     "turbolinks": "^5.2.0"
