--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node": "16.18.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "sass": "^1.63.6",
     "webpack-dev-server": "^3"
   },
