--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mailslurp-client": "^15.17.2",
     "rails_admin": "^3.1.2",
     "sass-loader": "10.2.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack": "^5.88.2"
   },
   "version": "0.1.0",
   "engines": {
